Fix level picker overflow when too many levels available

--- a/src/styles/flex.scss
+++ b/src/styles/flex.scss
@@ -53,3 +53,8 @@
 .is-hidden {
   display: none !important;
 }
+
+.px-0-5 {
+  padding-left: 0.175rem !important;
+  padding-right: 0.175rem !important;
+}
